# BallDetectingRS

./: README.md  main.py  pyproject.toml
src/classes/: DefaultCam.py  DepthCam.py
src/classes/default_cam/: DetectionFilter.py  MotionDetector.py  TimestampReader.py  Tracker.py  VideoProcessor.py  VisualizationManager.py
src/classes/default_cam/data/: Detection.py  Trajectory.py
src/classes/depth_cam/: CSVWriter.py  DetectionProcessor.py  RealsensePipeline.py  VisualizationOverlay.py
src/classes/depth_cam/data/: Detection.py
src/classes/general/: VideoWriterManager.py
src/classes/general/data/: CameraConfig.py
src/default_configs/: default_cam_config.py  depth_cam_config.py
src/helpers/state/: CameraManager.py  CameraState.py  ThreadSafeSingleton.py
